syntax = "proto3";

package GenericMessages;

message AsyncResult {
	bool Awk = 1;
}

message OperationResult {
	string RequestId= 1;
	bool Elaborated = 2;
}

message IsAliveRequest {
}

message IsAliveResult {
	bool IsAlive = 1;
}

message GenericRequestData {
	string RequestId = 1;
	double RequiredDelay = 2;
}
